# tennis-match-data

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  DATA.md  DATA_IMPROVEMENT.md  DATA_LICENSE.md  LICENSE  OBJECTIVE.md  README.md  SECURITY.md  TEST_IMPROVEMENT.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: data-error.yml
.github/workflows/: ci.yml  daily-current.yml  live-results.yml  pages.yml  weekly-audit.yml
contributions/: README.md  corrections.parquet
data/catalog/: catalog.parquet
data/conflicts/: conflicts.parquet
data/coverage/: coverage.parquet  source-audit.parquet
data/health/: health.parquet
data/identity/: event-links.parquet  match-aliases.parquet  player-links.parquet  tournament-sources.parquet
data/quarantine/: quarantine.parquet
docs/: QUERIES.md  SCHEMA.md  SOURCES.md
notebooks/: open_tennis_data_v3_polars.ipynb
reports/data-quality/: semantic-dedup-v3.2.json  (+3 more)
scripts/: cleanup-semantic-duplicates.py  commit-data.sh  open-audit-pr.sh  prepare-site-data.py  publish-downloads.sh  publish-v3-release.sh  release-assets.txt  remediate-audit-v3.2.py  remediate-exact-dates-v3.2.py  v3-release-assets.txt  verify-downloads.sh
site/: app.js  index.html  style.css
tests/: README.md  fixture_dataset.py  test_audit_workflow.py  test_cli.py  test_data_quality.py  test_dataset.py  test_exact_dates.py  test_model_scores.py  test_release.py  test_scripts.py  test_semantic_dedup.py  test_site_data.py  test_v3.py  test_v32_contract.py  test_wikimedia.py
(+830 files in other folders)
